--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - AlertMemoryLeaks",
+            "request": "launch",
+            "mainClass": "AlertMemoryLeaks",
+            "projectName": "effectivejava_bf8e9d6e"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - AvoidUnnecessaryObject",
             "request": "launch",
             "mainClass": "AvoidUnnecessaryObject",
